fixing spacing and canvas size of game area

--- a/kawaiiCanon/TemplateData/style.css
+++ b/kawaiiCanon/TemplateData/style.css
@@ -1,7 +1,7 @@
 body { padding: 0; margin: 0 }
-#unity-container { position: absolute }
+/* #unity-container { position: absolute }
 #unity-container.unity-desktop { left: 50%; top: 65%; transform: translate(-50%, -35%) }
-#unity-container.unity-mobile { width: 100%; height: 100% }
+#unity-container.unity-mobile { width: 100%; height: 100% } */
 #unity-canvas { background: #231F20 }
 .unity-mobile #unity-canvas { width: 80%; height: 80% }
 #unity-loading-bar { position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%); display: none }
